tests/invalid/parse/manual_ex050.pts
import Io;


function greet(string name = "world") : void {
Io.printLine(name);
}

function main() : void {
}
